[gd_scene load_steps=15 format=3 uid="uid://djojdixwrfkjp"]

[ext_resource type="Script" path="res://scenes/plane.gd" id="1_627xr"]
[ext_resource type="AudioStream" uid="uid://crkh12yhq7542" path="res://Sounds/explosion_sound.wav" id="2_cvqb4"]
[ext_resource type="Texture2D" uid="uid://b03ntapjy8fpb" path="res://Grafika/plane/plane_turn_l.png" id="2_pr3mo"]
[ext_resource type="PackedScene" uid="uid://c4m36axmd3dmu" path="res://scenes/burn.tscn" id="4_vtpc5"]
[ext_resource type="Texture2D" uid="uid://d3dp4ul1qnxb6" path="res://Grafika/plane/Explosion.png" id="5_1wwnk"]
[ext_resource type="Texture2D" uid="uid://bofl0t8bcedk8" path="res://Grafika/light/circle.png" id="5_qqvmf"]
[ext_resource type="Texture2D" uid="uid://cvprj51lwwjbj" path="res://Grafika/UI/crosshair002.png" id="6_iq3m5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jd3sc"]
radius = 15.0333

[sub_resource type="Animation" id="Animation_230hn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animations/Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ua0vx"]
resource_name = "explosion"
length = 0.5
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animations/Explosion:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Animations/Explosion:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Animations/Explosion:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.175),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Animations/Burn:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ExplosionSound:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_650ax"]
load_path = "res://.godot/imported/plane_str.png-9bb59681dbab92a40fc59a1fdb1cd032.ctex"

[sub_resource type="Animation" id="Animation_e8y68"]
resource_name = "idle"
length = 0.1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("CompressedTexture2D_650ax")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_i3tby"]
resource_name = "turn"
length = 0.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_pr3mo")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3buwi"]
_data = {
"RESET": SubResource("Animation_230hn"),
"explosion": SubResource("Animation_ua0vx"),
"idle": SubResource("Animation_e8y68"),
"turn": SubResource("Animation_i3tby")
}

[node name="Plane" type="CharacterBody2D"]
scale = Vector2(1.7, 1.7)
collision_mask = 30
script = ExtResource("1_627xr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jd3sc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3buwi")
}

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, 24.635)
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_qqvmf")

[node name="Animations" type="Node2D" parent="."]

[node name="Explosion" type="Sprite2D" parent="Animations"]
visible = false
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_1wwnk")
hframes = 8

[node name="Burn" parent="Animations" instance=ExtResource("4_vtpc5")]
position = Vector2(0, 18.345)
scale = Vector2(0.4, 0.52)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_pr3mo")
hframes = 4

[node name="Marker" type="Node2D" parent="."]

[node name="Gun" type="Marker2D" parent="Marker"]
position = Vector2(0, -20.455)

[node name="Aim" type="Marker2D" parent="Marker"]
position = Vector2(0, -150)
scale = Vector2(0.5, 0.5)

[node name="Sprite2D" type="Sprite2D" parent="Marker/Aim"]
texture = ExtResource("6_iq3m5")

[node name="Timer" type="Node2D" parent="."]

[node name="GunTimer" type="Timer" parent="Timer"]
wait_time = 0.2
one_shot = true

[node name="RocketTimer" type="Timer" parent="Timer"]
wait_time = 3.0
one_shot = true

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_cvqb4")
pitch_scale = 0.73

[connection signal="timeout" from="Timer/GunTimer" to="." method="_on_gun_timer_timeout"]
[connection signal="timeout" from="Timer/RocketTimer" to="." method="_on_rocket_timer_timeout"]
